fix alignment of button. Fixes #23.

--- a/static/all.scss
+++ b/static/all.scss
@@ -229,6 +229,7 @@ nav {
     &.button {
       text-align: right;
       margin-right: 4px;
+      max-width: 375px;
     }
   }
 
